# NativeReflector

./: .gitignore  README.md  build.gradle  settings.gradle
docs/: index.md
docs/javadoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  module-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
docs/javadoc/nativereflector.main/: module-summary.html
docs/javadoc/nativereflector.main/io/github/noeppi_noeppi/tools/nativereflector/: ModuleManager.html  ObjectManipulator.html  package-summary.html  package-tree.html
docs/javadoc/nativereflector.main/io/github/noeppi_noeppi/tools/nativereflector/internal/: JavaVM.Type.html  JavaVM.html  JniUtil.html  NativeLoader.html  NativeReflector.html  package-summary.html  package-tree.html
docs/releases/: index.md
src/main/java/: module-info.java
src/main/java/io/github/noeppi_noeppi/tools/nativereflector/: ModuleManager.java  ObjectManipulator.java
src/main/java/io/github/noeppi_noeppi/tools/nativereflector/internal/: JavaVM.java  JniUtil.java  NativeLoader.java  NativeReflector.java
src/native/: CMakeLists.txt
src/native/c/: NativeReflector.c  io_github_noeppi_noeppi_tools_nativereflector_ModuleManager.c  io_github_noeppi_noeppi_tools_nativereflector_ObjectManipulator.c
src/native/headers/: NativeReflector.h
