cmake_minimum_required(VERSION 3.13)
project(core)
set(CMAKE_C_STANDARD 99)

file(GLOB_RECURSE SOURCE_FILES c/*.c)
file(GLOB_RECURSE HEADER_FILES c/*.h headers/*.h)
include_directories(headers)
include_directories(headers/java)

add_library(nativereflector SHARED ${SOURCE_FILES} ${HEADER_FILES})
set_target_properties(nativereflector PROPERTIES COMPILE_FLAGS ${COMPILER_FLAGS} LINK_FLAGS ${COMPILER_FLAGS})
set_target_properties(nativereflector PROPERTIES PREFIX ${TARGET_ID})
set_target_properties(nativereflector PROPERTIES OUTPUT_NAME "nativereflector")
set_target_properties(nativereflector PROPERTIES SUFFIX ${FILE_SUFFIX})
set_target_properties(nativereflector PROPERTIES NO_SONAME ON)
include_directories(${JAVA_HOME}/include)
include_directories(${JAVA_HOME}/include/linux)
include_directories(${JAVA_HOME}/include/win32)
include_directories(${JAVA_HOME}/include/darwin)